2006-03-24  Andrew Cagney  <cagney@redhat.com>

	* Task.java (performContinue, performAttach, performDetach)
	(performAddObservation): Simplify.
	
	* Task.java (performRemoval): Simplify.
	(performContinue): Note race condition with performAddObservation.
	
	* Proc.java (requestDeleteObserver, requestAddObserver): Replace
	performAddObservation, and performDeleteObservation.
	* Task.java (requestAddObserver, requestDeleteObserver): Delete,
	instead directly call Proc .requestDeleteObserver and Proc
	.requestAddObserver.  Clean up log messages.
	* Observation.java (observable, observer): Change from private to
	final.
	* TaskState.java: Update.

	* TaskState.java (processSignaledEvent): Rename
	processPerformedSignaled.
	* Task.java: Update.  Rename received* methods to processed*.
	* LinuxHost.java: Update.
	
2006-03-22  Andrew Cagney  <cagney@redhat.com>

	* ProcState.java (isStopped): Delete.
	* Proc.java (isStopped): Delete.

2006-03-20  Andrew Cagney  <cagney@redhat.com>

	* TestId.java: New.
	* ProcId.java (isCompatible): New
	* TaskId.java (isCompatible): New.
	* Id.java (isCompatible): New.
	(equals): Use isCompatible instead of isInstance.
	(compareTo): Simplify.

2006-03-19  Andrew Cagney  <cagney@redhat.com>

	* Task.java (receiveClonedEvent, receiveForkedEvent)
	(receiveStoppedEvent, receiveTrappedEvent, receiveSignaledEvent)
	(receiveTerminatingEvent, receiveDisappearedEvent)
	(receiveSyscalledEvent, receiveTerminatedEvent)
	(receiveExecedEvent): Simplify, directly handle the event.
	* LinuxTask.java (postDisappearedEvent): New; use instead of
	receiveDsiappearedEvent.
	
	* TaskState.java (clonedState): Replace Task parameter with
	TaskState parameter.
	* Task.java (newState, oldState): Replace <<state>>.
	(getState): Replace getStateString.
	(toString): Update.
	* TestRefresh.java: Update.

	* StressAttachDetachManyTasks.java: New file.

	* StressAttachDetachRapidlyCloningMainTask.java: Rename
	StressTaskObserver.java.
